Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for 1.3 [not yet released]
==================================

 o #15446 htpassed plugin: Extended to support authorization on 'xpath:' and 'domain:' specific access

 o #15438 SOCKET protocol: Calling xmlBlaster core is now in a dispatched thread to support concurrent ping()
          and other method invocations. Fixes for example long lasting subscribes and blocking gets.

 o #15419 added dispatch statistic to client dispatcher and added bypass of ping in case there is a writing- or
          reading activity on that dispatcher. This fixes ping failures due to ongoing write/read operations

 o #15413 XmlRpc callback: Fixed to throw COMMUNICATION exceptions on ping or updateOneway failures
          and for update() exceptions thrown on server side

 o #15412 Prevent NPE if topicProperty is null

 o #15397 -Fixed dump to file (added out.close())
          -Nicer, human readable dump conforming to XmlScript markup
	  -Added reference counting check, see I_AdminMap.checkConsistency() and I_AdminNode.checkConsistency()
	  -Fixed to activate destroyTimeout setting when administrative or coming from persistence on startup
	  -Fixed eliminating topicHandler duplicates in persistent store during startup
	  -Changed persistent messages to be transient for session callback queues with negative session ID
	   as those wouldn't be found deterministic after restart

 o #15390 ConnectionPool now throws away Connection in case of an exception in the jdbc queue

 o #15381 C# client library: Added Csharp wrapper around xmlBlaster client C library (xmlBlaster/src/csharp/NativeC.cs)
          See http://www.xmlBlaster.org/xmlBlaster/doc/requirements/client.csharp.html

 o #15357 I_Entry.removed is now invoked outside synchronize in queues to avoid deadlock

 o #15348 Increased information density of server side logging (similar to good old org.jutils times)
