@@ -4,6 +4,14 @@ The "#99999" numbers are Subversion revision numbers.
 Changes for 1.3 [not yet released]
 ==================================
 
+ o #15465 receive() leaking threads fixed:
+          The I_Queue implementations now fire changed() in shutdown as well
+          allowing the blocking queue query threads to return.
+          Before the receive() threads were leaked if the queue disappeared
+          as a notify was never triggered
+
+ o #15459 Bugfix receive(): Could deadlock because of synchronize declaration in CoreHandler
+
  o #15446 htpassed plugin: Extended to support authorization on 'xpath:' and 'domain:' specific access
 
  o #15438 SOCKET protocol: Calling xmlBlaster core is now in a dispatched thread to support concurrent ping()
